<resources>
    <string name="app_name">RickAndMortyAppKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="logo_name">Logo nome</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="register">Registrar</string>
    <string name="account_login">Ja tem uma conta ?</string>
    <string name="user_name">Nome de usuário</string>
    <string name="or_sign">Ou registre-se com</string>
    <string name="or_login">Ou entre com</string>
    <string name="sign">Registre-se</string>
    <string name="welcome">Bem vindo</string>
    <string name="create_account">Ainda não tem conta?</string>
    <string name="create_account_info">Registre-se</string>
    <string name="welcome_again">Bem vindo novamente</string>
    <string name="recovery_password">Esqueceu a senha?</string>
    <string name="episodes">Episódios</string>
    <string name="location">Localização</string>
    <string name="location_rv">Localização:</string>
    <string name="characters">Personagens</string>
    <string name="main">Personagens principais</string>
    <string name="title_rv">Rick Sanchez</string>
    <string name="race">Raça </string>
    <string name="status">Vivo</string>
    <string name="next_ep">Proximo Episódio</string>
    <string name="recover_password">Clique aqui</string>
    <string name="info_recover">Redefinir senha</string>
    <string name="info_user">Digite seu endereço de e-mail para redefinir sua senha:</string>
    <string name="logout">Deslogar</string>
    <string name="search">Pesquisar</string>
    <string name="filter">Filtro</string>
    <string name="logo_app">Logo App</string>
    <string name="remember">Lembrar de Mim</string>
    <string name="title_characters">Characters</string>

    <!-- FilterFragment Strings -->
    <string name="title_btn_reset">Reset</string>
    <string name="title_btn_apply">Apply</string>
    <string name="title_filter">Filter</string>
    <string name="title_status">Status</string>
    <string name="txt_chip_alive">Alive</string>
    <string name="txt_chip_dead">Dead</string>
    <string name="txt_chip_unknown">unknown</string>
    <string name="title_gender">Gender</string>
    <string name="txt_checkbox_female">Female</string>
    <string name="txt_checkbox_genderless">Genderless</string>
    <string name="txt_checkbox_male">Male</string>
    <string name="txt_checkbox_unknown">unknown</string>

    <!-- DetailFragment Strings -->
    <string name="title_episodes">Episodes</string>
    <string name="title_origin">Origin</string>
    <string name="title_location">Location</string>
    <string name="title_reset">Reset</string>
    <string name="planet">Planeta</string>
    <string name="season">Temporada</string>
    <string name="episode_number_format">Episode %s</string>
    <string name="expand">expand</string>
    <string name="close">Fechar</string>
    <string name="total_episodes">Total episodes:</string>
    <string name="pilot">Pilot</string>
    <string name="earth">Earth</string>
    <string name="origine">Origine:</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
    <string name="human">Human</string>
    <string name="species">Species:</string>
    <string name="status_">Status:</string>
    <string name="alive">Alive</string>
    <string name="type">Type</string>
    <string name="dimension">Dimension</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="text_title_warning">Atençao</string>
    <string name="text_button_warning">Entendi</string>
    <string name="email_empty">Preencha seu e-mail</string>
    <string name="password_empty">Preencha sua senha</string>
</resources>